--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "devDependencies": {
-    "@eslint/js": "^9.20.0",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
-    "eslint": "^9.20.1",
-    "eslint-plugin-vue": "^9.32.0",
-    "globals": "^15.15.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.0"
+  "name": "algorithms",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "es": "^0.8.0"
+    "canvas": "^3.1.0",
+    "cytoscape": "^3.31.1",
+    "d3": "^7.9.0",
+    "ts": "^0.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "@types/node": "^22.13.10",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.26.1"
   }
 }
